[package]
name = "rust-http-lambda"
version = "0.1.0"
edition = "2021"

[workspace]
# Since this is a test project, don't make it a workspace member.

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
tokio = { version = "1", features = ["macros"] }

# Disable the default features, and enable only the source that you care about - Amazon API Gateway HTTP APIs and AWS
# Lambda Function URLs in this case.
[dependencies.lambda_http]
version = "0.10.0"
default-features = false
features = ["apigw_http", "tracing"]
